hphp/test/zend/good/ext/standard/tests/array/arsort_object2.php.expectf
*** Testing arsort() : object functionality ***

Fatal error: Class undefined: for_integer_asort in %s/arsort_object2.php on line 52
